--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest src/components/PhotoForm.test.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,21 +43,25 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "@babel/preset-env": "^7.21.0",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@testing-library/dom": "^8.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.1.0"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest"
+      "^.+\\.[tj]sx?$": "babel-jest"
     },
     "transformIgnorePatterns": [
-      "/node_modules/(?!axios/)"
+      "node_modules/(?!(axios|react-leaflet)/)"
     ]
   }
 }
